--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@esmyy/open-datadog-logs",
+  "private": false,
   "version": "1.0.0",
   "description": "Open Datadog Logs in the browser when a request ID is copied to the clipboard",
   "main": "index.js",
